compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_case_variable_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 21 { _twentyOne -> {Nil} }"
---
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:11
  │
1 │ case 21 { _twentyOne -> {Nil} }
  │           ^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _twenty_one
